[project]
name = "image-gen"
version = "0.1.0"
description = "Image generation using Z-Image-Turbo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "pillow>=12.1.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
